welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:3: error: type mismatch;
 found   : Unit
 required: Boolean
	else if (( b<20 && b>12 ) || (a<13 || a>19)) { true }
             ^